<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root_screen">
    <PreferenceCategory android:title="常用">
        <ListPreference
            android:key="pid"
            android:entries="@array/pid"
            android:entryValues="@array/pid"
            android:title="语种,识别模型,在线语义"
            android:summary=""
            android:defaultValue="@string/pid_default"
            android:dialogTitle="语种, PID"/>
        <ListPreference
                android:key="lm_id"
                android:entries="@array/lm_id"
                android:entryValues="@array/lm_id"
                android:title="LMID，自训练平台Model ID，请选PID=8002生效"
                android:summary=""
                android:defaultValue="@string/pid_default"
                android:dialogTitle="自训练平台Model ID"/>
        <ListPreference
            android:key="decoder"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="纯在线/在线和离线命令词"
            android:entries="@array/decoder_list"
            android:entryValues="@array/decoder_list"
            android:summary=""
            android:title="纯在线 或 在线+离线命令词, DECODER" />
    </PreferenceCategory>
    <PreferenceCategory android:title="高级">
        <ListPreference
            android:key="vad"
            android:entries="@array/vad_list"
            android:entryValues="@array/vad_list"
            android:title="VAD算法"
            android:summary=""
            android:defaultValue="@string/vad_default"
            android:dialogTitle="VAD"/>
        <CheckBoxPreference
            android:key="enable.long.speech"
            android:defaultValue="false"
            android:summary="长语音参数，优先级高于vad_endpoint_timeout"
            android:title="长语音" />
        <ListPreference
            android:key="vad.endpoint-timeout"
            android:defaultValue="@string/vad_timeout_default"
            android:dialogTitle="VAD_ENDPOINT_TIMEOUT"
            android:entries="@array/vad_timeout_list"
            android:entryValues="@array/vad_timeout_list"
            android:summary=""
            android:title="VAD时长设置" />
        <ListPreference
            android:key="infile"
            android:defaultValue="@string/infile_default"
            android:dialogTitle="外部音频"
            android:entries="@array/infile_list"
            android:entryValues="@array/infile_list"
            android:summary=""
            android:title="外部音频" />
        <CheckBoxPreference
            android:key="_outfile"
            android:defaultValue="false"
            android:summary="同时开启'音频回调CALLBACK_EVENT_ASR_AUDIO参数'才生效，默认保存路径 /sdcard/baiduAsr/outfile.pcm 见代码中OUT_FILE参数"
            android:title="保存录音" />
        <CheckBoxPreference
            android:key="disable-punctuation"
            android:defaultValue="false"
            android:summary="在选择输入法模型的前提下生效。如用于本地语义解析"
            android:title="禁用标点" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-data"
            android:summary="CALLBACK_EVENT_ASR_AUDIO参数。不需要音频二进制数据的回调，请勿开启，否则影响性能"
            android:title="开启代码中音频回调事件"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-volume"
            android:summary="CALLBACK_EVENT_ASR_VOLUME参数。是否需要音频的音量回调。正常使用请勿开启"
            android:title="开启代码中音量回调事件"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="语义解析-本地及离线命令词">
        <ListPreference
            android:key="nlu"
            android:defaultValue="@string/decoder_default"
            android:dialogTitle="本地语义解析"
            android:entries="@array/nlu_list"
            android:entryValues="@array/nlu_list"
            android:summary=""
            android:title="本地语义解析，请同时勾选下方的离线命令词文件" />
        <CheckBoxPreference
            android:key="grammer"
            android:defaultValue="false"
            android:summary="在线时及离线时都可以使用本地语义功能。ASR_OFFLINE_ENGINE_GRAMMER_FILE_PATH"
            android:title="离线命令词及本地语义bsg文件" />
        <CheckBoxPreference
            android:key="_slot_data"
            android:defaultValue="false"
            android:summary="勾选后会覆盖原来的词条，可以测'打电话给妈妈'，但是'打电话给张三'失效。SLOT_DATA "
            android:title="扩展词条，需代码中设置bsg文件生效" />
    </PreferenceCategory>
    <PreferenceCategory android:title="不常用">
        <CheckBoxPreference
            android:key="_tips_sound"
            android:defaultValue="false"
            android:summary=""
            android:title="提示音" />
        <CheckBoxPreference
            android:key="enable.numberformat"
            android:defaultValue="true"
            android:summary=""
            android:title="后处理打开数字归一化，仅语种PID 8001 8002 有效" />
        <ListPreference
            android:key="punctuation-mode"
            android:defaultValue="@string/punctuation_mode_default"
            android:dialogTitle="本地语义解析"
            android:entries="@array/punctuation_mode_list"
            android:entryValues="@array/punctuation_mode_list"
            android:summary=""
            android:title="后处理标点模式，仅语种PID  8001 8002 有效" />
    </PreferenceCategory>
</PreferenceScreen>