<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="root_screen">
    <PreferenceCategory
            android:title="常用">
        <ListPreference
            android:key="pid"
            android:entries="@array/pid"
            android:entryValues="@array/pid"
            android:title="PID，语种"
            android:summary=""
            android:defaultValue="@string/pid_default"
            android:dialogTitle="PID，语种"/>
        <ListPreference
                android:key="lm_id"
                android:entries="@array/lm_id"
                android:entryValues="@array/lm_id"
                android:title="LMID，自训练平台ID，请选PID=8002生效"
                android:summary=""
                android:defaultValue="@string/pid_default"
                android:dialogTitle="自训练平台ID"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="长语音及VAD时长设置">
        <CheckBoxPreference
            android:key="enable.long.speech"
            android:defaultValue="false"
            android:summary="长语音参数，优先级高于vad_endpoint_timeout"
            android:title="长语音" />
        <ListPreference
            android:key="vad.endpoint-timeout"
            android:entries="@array/vad_timeout_list"
            android:entryValues="@array/vad_timeout_list"
            android:title="VAD时长设置"
            android:summary=""
            android:defaultValue="@string/vad_timeout_default"
            android:dialogTitle="长语音请选0, VAD_ENDPOINT_TIMEOUT"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="高级设置">
        <ListPreference
            android:key="vad"
            android:entries="@array/vad_list"
            android:entryValues="@array/vad_list"
            android:title="VAD是否开启"
            android:summary=""
            android:defaultValue="@string/vad_default"
            android:dialogTitle="VAD"/>
        <ListPreference
            android:key="infile"
            android:entries="@array/infile_list"
            android:entryValues="@array/infile_list"
            android:title="外部音频"
            android:summary=""
            android:defaultValue="@string/infile_default"
            android:dialogTitle="外部音频, IN_FILE"/>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="_outfile"
                android:summary="保存路径为临时目录 如/sdcard/baiduAsr/outfile.pcm。 OUT_FILE参数。需要同时开启CALLBACK_EVENT_ASR_AUDIO参数"
                android:title="保存录音"/>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="accept-audio-data"
                android:summary="CALLBACK_EVENT_ASR_AUDIO参数。不需要音频二进制数据的回调，请勿开启，否则影响性能"
                android:title="开启代码中音频回调事件"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="不常用">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disable-punctuation"
            android:summary="在选择输入法模型的前提下生效。DISABLE_PUNCTUATION"
            android:title="禁用标点" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="_tips_sound"
            android:summary=""
            android:title="提示音"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept-audio-volume"
            android:summary="CALLBACK_EVENT_ASR_VOLUME参数。是否需要音频的音量回调。正常使用请勿开启"
            android:title="开启代码中音量回调事件"/>
    </PreferenceCategory>
</PreferenceScreen>